--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -1,2 +1,48 @@
 @import "../../bower_components/bootstrap/less/bootstrap";
 @import "../../bower_components/bootstrap/less/theme";
+@import "../../bower_components/less-elements/elements";
+@import "../../bower_components/fontawesome/less/font-awesome";
+
+
+@import "variables";
+@import "color";
+
+.mybox{
+  height: @box-height;
+  border: @box-border-size solid @box-border-color;
+   
+}
+
+div.box1{
+  .mybox;
+  background-color: @corporate-color;
+  
+  &:hover 
+  { 
+    background-color: lighten(@corporate-color, 30%);
+  }
+
+
+}
+
+div.box2{
+  .mybox;
+  background-color: lighten(@corporate-color,30%);
+  .border-radius(@box-border-radius, @box-border-radius, @box-border-radius, @box-border-radius);
+  .gradient(#FFF, lighten(@mycolor, 30%), @corporate-color);
+  }
+
+div.box3{
+  .mybox;
+  background-color: @corporate-color;
+  }
+
+.fa-border-red{
+    border-color: #FB0606;
+}
+
+span.myless1 {
+
+  
+  
+}
